lang/checker/tests/cases/pass/resolve-type-match/tables/dictionary.slt
type A = {
	a: string,
	b: number,
}
local sample: A = {
	a = "",
	b = 12,
}