lang/checker/tests/cases/fail/resolve-type-match/tables/dictionary.slt
type A = {
	a: string,
	b: number,
}
local sample: A = {}